# inventory_flow

./: .gitignore  README.md  pyproject.toml
examples/classmethod_and_staticmethod/: lesson1.py
examples/descriptors/: lesson1.py
examples/magic __new__/: magic __new__.py  singleton.py
examples/private, public, protected/: lesson1.py
inventory/: product.py  supplier.py
