[tool.poetry]
name = "inventory-flow"
version = "0.1.0"
description = "Учебный пет-проект для практики ООП на примере бизнеса - складские помещения"
authors = ["Yury Petrov <gderpov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
